Fixed page title and subtitle resizing on smaller screens

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -139,7 +139,7 @@
 .title {
   margin-top: 0px;
   margin-bottom: -5px;
-  font-size: 50pt;
+  font-size: 5em;
   text-align: center;
 }
 
@@ -147,6 +147,24 @@
   font-size: 2.5em;
   text-align: center;
   margin-bottom: 25px;
+}
+
+@media only screen and (max-width: 800px) and (min-width: 600px){
+  .title {
+    font-size: 3.5em;
+  }
+  .subtitle {
+    font-size: 1.75em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 2.8em;
+  }
+  .subtitle {
+    font-size: 1.4em;
+  }
 }
 
 .arrow {
